--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-screens": "^3.4.0",
     "react-native-sqlite-2": "^3.3.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "realm": "^10.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
