--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "realm": "^10.6.0"
+    "realm": "^10.6.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
