--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.64.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-html-to-pdf": "github:jdaoliveiraprograming/react-native-html-to-pdf",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
